--- a/pagina.html
+++ b/pagina.html
@@ -29,7 +29,7 @@
 
   <!--Classificação estrela-->
     <div class="position-relative">
-        <h1>Repositório de Projetos Integradores</h1>
+        <h1>Repositório de Projetos Integradores.</h1>
         <div class="position-absolute top-0 end-0 estrelas">
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
