Arquivo de orientações, troca da logo no header

--- a/testenav.html
+++ b/testenav.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
       <!-- Logo do Senac -->
       <a href="/home" class="logo-link">
-        <img src="/Senac_logo.svg.png" alt="Logo do Senac" class="logo" />
+        <img src="/Sem_título-removebg-preview.png" alt="Logo do Senac" class="logo" />
       </a>
 
       <!-- Botão hamburger (visível no mobile) -->
@@ -35,30 +35,52 @@
           <span class="icon-text"><i class="bi bi-plus-lg"></i> Submeter</span>
         </a>
 
-        <!-- Botões principais -->
+ <!-- ===================== ⚠ ===================== -->  <!-- ===================== ⚠ ===================== -->
+ <!-- ===================== ⚠ ===================== -->  <!-- ===================== ⚠ ===================== -->
+
+        <!-- Botões principais --> 
         <a href="/home" class="nav-button active">
           <span class="icon-text"><i class="bi bi-house-door-fill"></i> Home</span>
         </a>
         <a href="/pesquisar" class="nav-button">
           <span class="icon-text"><i class="bi bi-search"></i> Pesquisar PI</span>
         </a>
-        <a href="/forum" class="nav-button">
+        <!-- <a href="/forum" class="nav-button">
           <span class="icon-text"><i class="bi bi-chat-dots-fill"></i> Fórum</span>
-        </a>
+        </a> -->
         <a href="/perfil" class="nav-button">
           <span class="icon-text"><i class="bi bi-person-circle"></i> Perfil</span>
         </a>
       </div>
     </nav>
-
-    <!-- Conteúdo principal desativado por enquanto -->
-    <!--
-    <main class="main-content">
-      <h1>Bem-vindo!</h1>
-      <p>Conteúdo principal...</p>
-    </main>
-    -->
   </div>
+
+<!-- ===================== ⚠ ===================== -->
+
+
+    <!-- SEU CÓDIGO COMEÇA A PARTIR DAQUI -->
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ===================== ⚠ ===================== -->
 
   <!-- FOOTER -->
   <footer class="footer">
